--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,14 @@
 Package: nml
-Title: What the Package Does (one line, title case)
+Title: An R Package for Parsing Fortran Namelist Files
 Version: 0.0.0.9000
-Authors@R: Joseph Stachelek <stachel2@msu.edu>
-Description: What the package does (one paragraph).
+Author: Joseph Stachelek <stachel2@msu.edu>
+Maintainer: Joseph Stachelek <stachel2@msu.edu>
+Description: An R package for parsing Fortran namelist files.
 Depends: R (>= 3.4.0)
-License: GPL
+License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Suggests: testthat
+URL: https://github.com/jsta/nml
+BugReports: https://github.com/jsta/nml/issues
+RoxygenNote: 6.0.1
